# frappe_payments

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
frappe_payments/: hooks.py  modules.txt
frappe_payments/api/authorize/: charge.py  subscription.py
frappe_payments/api/nmi/: charge.py
frappe_payments/config/: desktop.py  docs.py
frappe_payments/frappe_payments/doctype/authorize_settings/: authorize_settings.js  authorize_settings.json  authorize_settings.py
frappe_payments/frappe_payments/doctype/nmi_settings/: nmi_settings.js  nmi_settings.json  nmi_settings.py
frappe_payments/utils/: authorize_client.py  coupon.py  error_handler.py  nmi_client.py  payment_settings.py
frappe_payments/www/: authorize-test.html  nmi-test.html
